[package]
name = "rogue-game"
version = "0.1.0"
authors = ["maxhha <devmaxhha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
termion = "1.5.5"
ndarray = "0.13.1"
bracket-terminal = "0.8.1"
bracket-pathfinding = "0.8.1"
